Fix: Charts block needs horizontal scroll bar
git-svn-id: svn://svn.webtrees.net/trunk@3015 4201c862-f99b-1943-94d0-25fd05010cbc

--- a/phpGedView/themes/ocean/style.css
+++ b/phpGedView/themes/ocean/style.css
@@ -644,6 +644,7 @@ a:hover .nameZoom {
 }
 
 .block {
+	overflow: auto;
 	background-color: #b1cff0;
 	color: black;
 	border: ridge #a1bfe0 2px;
